--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/gijslebesque/weather-app#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta6",
